<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_upper_line"
        android:layout_marginTop="@dimen/margin_top_upper_line"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize_upper_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_upper_line"
        android:layout_marginTop="@dimen/margin_top_upper_line"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_upper_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:onClick="onClickButton"
        android:padding="@dimen/padding_inside_textview"
        android:tag="@string/tag_button_0"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#D35F5F"
        android:gravity="center"
        android:onClick="onClickButton"
        android:padding="@dimen/padding_inside_textview"
        android:tag="@string/tag_button_1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:onClick="onClickButton"
        android:padding="@dimen/padding_inside_textview"
        android:tag="@string/tag_button_2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#588BB5"
        android:gravity="center"
        android:onClick="onClickButton"
        android:padding="@dimen/padding_inside_textview"
        android:tag="@string/tag_button_3"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3" />

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/task_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />

</androidx.constraintlayout.widget.ConstraintLayout>