<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background">

                <TextView
                    android:id="@+id/textViewResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/start_display_margin"
                    android:layout_marginTop="@dimen/content_viewcard_top_and_bottom_margin"
                    android:layout_marginEnd="@dimen/start_display_margin"
                    android:layout_marginBottom="@dimen/content_viewcard_top_and_bottom_margin"
                    android:gravity="center"
                    android:padding="@dimen/result_padding"
                    android:text="@string/template_result_info"
                    android:textSize="@dimen/record_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonRestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_restart_margin"
                android:background="@color/colorPrimary"
                android:onClick="restart"
                android:padding="@dimen/button_restart_padding"
                android:text="@string/button_restart"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_restart_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoBackToStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewResult"

                />

            <Button
                android:id="@+id/buttonGoBackToStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_restart_margin"
                android:background="@color/colorPrimary"
                android:onClick="goToStart"
                android:padding="@dimen/button_restart_padding"
                android:text="@string/button_go_back_to_main"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_restart_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRestart" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>